--- a/05 arrays/index.html
+++ b/05 arrays/index.html
@@ -3,5 +3,13 @@
         <script type="module" defer src="app.js"></script>
     </head>
     <body>
+
+        <h1 class="Games">Nier:Automata</h1>
+        <h1 class="Games">Persona 5</h1>
+        <h1 class="Games" >Nier:Replicant</h1>
+        <h1 class="Games">God of War</h1>
+        <h1 class="Games">Call of Duty Black Ops 3</h1>
+
+
     </body>
 </html>
